--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "ask-sdk-core": "^2.7.0",
-    "ask-sdk-model": "^1.27.0"
+    "ask-sdk-model": "^1.27.0",
+    "aws-sdk" :"^2.1340.0"
   }
 }
